# iccadcontest-2026D

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  analyze.md  checker
.cursor/rules/: annealing-optimizer.mdc  debug-progress.mdc
.github/workflows/: cmake-single-platform.yml
docker/rocky8/: Dockerfile
docs/: annealing-optimizer.md  architecture.md  experiments.md  optimization-algorithms.md  optimization-architecture.md  optimization-complexity.md  optimization-experiment-parameters.md  optimizers.md  report-plots.md
docs/rules/: annealing-optimizer.md  debug-progress.md
report/: .gitignore  README.md  main.tex  neurips_2025.sty  references.bib
results/: greedy_iteration1_basic.txt  greedy_iteration2_resize_polish.txt  greedy_iteration3_multiphase.txt  greedy_iteration4_deeper_resize.txt  greedy_iteration5_deeper_phases.txt  isa_iteration1_incoming_edges.txt  isa_iteration2_weighted_guidance.txt  isa_iteration3_resize_polish.txt  iteration0_baseline.txt  iteration1_remove_undo_fix.txt  iteration2_restore_metrics_fix.txt  iteration3_greedy_removal.txt  iteration4_area_cleanup_only.txt  iteration5_remove_heavy_mix.txt  milp_iteration1_endpoint_ip.txt  milp_iteration2_removal_candidates.txt  milp_iteration3_feasible_removal.txt  milp_iteration4_resize_variables.txt  milp_iteration5_feasible_resize.txt  strategy_evaluation.md
scripts/: docker-build-rocky8.sh  new_plot.py  package_submission.py  plot_optimizer_progress.py  plot_optimizer_report.py  run_all_testcases.sh  slurm_run_all_configs.sh  slurm_run_all_optimizers.sh  visualize_clock_tree_trace.py
src/: app.cpp  app.hpp  clock_tree.cpp  clock_tree.hpp  datapath_graph.cpp  datapath_graph.hpp  debug_progress.cpp  debug_progress.hpp  evaluation.cpp  evaluation.hpp  evaluator.cpp  evaluator.hpp  main.cpp  parser.cpp  parser.hpp  solver.cpp  solver.hpp  types.hpp
src/optimization/: AGENTS.md  annealing_optimizer.cpp  annealing_optimizer.hpp  candidate_policy.cpp  candidate_policy.hpp  factory.cpp  factory.hpp  optimizer.cpp  optimizer.hpp  optimizer_config.cpp  optimizer_config.hpp  skew_model.cpp  skew_model.hpp  timing_state.cpp  timing_state.hpp
src/optimization/greedy/: greedy_optimizer.cpp  greedy_optimizer.hpp
src/optimization/milp/: milp_optimizer.cpp  milp_optimizer.hpp
src/optimization/policy_averaged/: policy_averaged_greedy_seed_tabu_optimizer.cpp  policy_averaged_greedy_seed_tabu_optimizer.hpp
src/optimization/randomized_rcl/: randomized_rcl_optimizer.cpp  randomized_rcl_optimizer.hpp
src/optimization/repair_recover/: a6_tabu_repair_recover_optimizer.cpp  a6_tabu_repair_recover_optimizer.hpp  repair_recover_optimizer.cpp  repair_recover_optimizer.hpp
submission/: A_README.md
submission/E_Supplemental_Materials/: README_FOR_SUPPLEMENT.md
testcases/: .gitignore
testcases/testcase0/: FF_delay.rpt  SS_delay.rpt  clk_tree.structure
testcases/testcase1/: FF_delay.rpt  SS_delay.rpt  clk_tree.structure
testcases/testcase2/: FF_delay.rpt  SS_delay.rpt  clk_tree.structure
testcases/testcase3/: FF_delay.rpt  SS_delay.rpt  clk_tree.structure
testcases/testcase4/: clk_tree.structure
testcases/visual_demo/: FF_delay.rpt  SS_delay.rpt  buf.lib  clk_tree.structure
tests/: CMakeLists.txt  test_annealing.cpp  test_app.cpp  test_clock_tree.cpp  test_datapath_parser.cpp  test_debug_progress.cpp  test_evaluation.cpp  test_optimizer_config.cpp  test_parser.cpp
tests/fixtures/: greedy_experiment.conf  sa_experiment.conf  timing_only.conf
visual_trace/: frames.json  index.html  instruction.md  trace.txt
(+16 files in other folders)
